# llm-brainscan

./: .gitignore  .zenodo.json  CLAUDE.md  LICENCE  README.md  hf-brainscan-images.py  pyproject.toml  save_images.py  transform_weights.py
assets/: README.md
backlog/: config.yml
backlog/tasks/: task-1 - Design-speech-I-O-UX-for-text-strip-and-training-loop.md  task-2 - Set-up-systemd-service-for-live-training-on-Jetson.md  task-3 - Run-the-exhibition-display-at-native-8K.md
deploy/: brainscan.service  install-wifi.sh  select-audio-source.sh
docs/superpowers/plans/: 2026-04-26-conversational-brain.md  2026-05-05-layout-delineation.md
docs/superpowers/specs/: 2026-04-26-conversational-brain-design.md  2026-05-05-layout-delineation-design.md
scripts/: download_pg19.py  setup-jetson-desktop.sh
src/brainscan/: audio_drone.py  captions.py  conversation.py  data.py  font.py  lanes.py  layout.py  model.py  rebirth.py  renderer.py  snapshot.py  stt.py  train.py  tts.py  tuning.py
tests/: conftest.py  test_audio_drone.py  test_captions.py  test_conversation.py  test_data.py  test_font.py  test_lanes.py  test_layout.py  test_model.py  test_polish.py  test_rebirth.py  test_renderer.py  test_snapshot.py  test_stt.py  test_text_buffer.py  test_train.py  test_train_integration.py  test_tts.py  test_tuning.py
