[project]
name = "llm-brainscan"
version = "0.1.0"
description = "Visualise transformer weight changes during training and activations during inference"
requires-python = ">=3.12,<3.14"
dependencies = [
    "torch>=2.5",
    "numpy",
    "pillow",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-xdist",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brainscan"]
