[project]
name = "llm-brainscan"
version = "0.1.0"
description = "Visualise transformer weight changes during training and activations during inference"
requires-python = ">=3.12,<3.14"
dependencies = [
    "torch>=2.5",
    "numpy",
    "pillow",
    "wgpu>=0.31",
    "rendercanvas",
    "faster-whisper>=1.0",
    "sounddevice",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-xdist",
    "ruff>=0.15.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.hatch.build.targets.wheel]
packages = ["src/brainscan"]
