[project]
name = "llm-brainscan"
version = "0.1.0"
description = "Visualise transformer weight changes during training and activations during inference"
requires-python = ">=3.10,<3.14"
dependencies = [
    "torch>=2.5",
    "numpy",
    "pillow",
    "wgpu>=0.31",
    "rendercanvas",
    "faster-whisper>=1.0",
    "sounddevice",
    "glfw>=2.10.0",
]

[project.optional-dependencies]
tts = ["piper-tts>=1.2"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-xdist",
    "ruff>=0.15.7",
    "ty",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.hatch.build.targets.wheel]
packages = ["src/brainscan"]

[tool.ty.src]
exclude = ["scripts/"]

[tool.uv]
override-dependencies = ["onnxruntime<1.24", "numpy<2"]

[tool.uv.sources]
torch = [
    { url = "https://pypi.jetson-ai-lab.io/jp6/cu126/+f/62a/1beee9f2f1470/torch-2.8.0-cp310-cp310-linux_aarch64.whl", marker = "python_version == '3.10'" },
]
